; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_parser.tab.c_append_str.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_parser.tab.c_append_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.str_list_entry_t = type { i8*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i8*)* @append_str to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @append_str(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.str_list_entry_t*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %11, label %9

9:                                                ; preds = %2
  %10 = load i32*, i32** %4, align 8
  store i32* %10, i32** %3, align 8
  br label %30

11:                                               ; preds = %2
  %12 = load i32*, i32** %4, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %19, label %14

14:                                               ; preds = %11
  %15 = call i8* @xmalloc(i32 4)
  %16 = bitcast i8* %15 to i32*
  store i32* %16, i32** %4, align 8
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @list_init(i32* %17)
  br label %19

19:                                               ; preds = %14, %11
  %20 = call i8* @xmalloc(i32 16)
  %21 = bitcast i8* %20 to %struct.str_list_entry_t*
  store %struct.str_list_entry_t* %21, %struct.str_list_entry_t** %6, align 8
  %22 = load i8*, i8** %5, align 8
  %23 = load %struct.str_list_entry_t*, %struct.str_list_entry_t** %6, align 8
  %24 = getelementptr inbounds %struct.str_list_entry_t, %struct.str_list_entry_t* %23, i32 0, i32 0
  store i8* %22, i8** %24, align 8
  %25 = load i32*, i32** %4, align 8
  %26 = load %struct.str_list_entry_t*, %struct.str_list_entry_t** %6, align 8
  %27 = getelementptr inbounds %struct.str_list_entry_t, %struct.str_list_entry_t* %26, i32 0, i32 1
  %28 = call i32 @list_add_tail(i32* %25, i32* %27)
  %29 = load i32*, i32** %4, align 8
  store i32* %29, i32** %3, align 8
  br label %30

30:                                               ; preds = %19, %9
  %31 = load i32*, i32** %3, align 8
  ret i32* %31
}

declare dso_local i8* @xmalloc(i32) #1

declare dso_local i32 @list_init(i32*) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
